--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">GroceryStore</string>
+    <string name="bio">My name is andres. I go haaaaan. My momma love me. Goddamn.</string>
+    <string name="name">Andres Arango</string>
+    <string name="nickname">loco</string>
 </resources>
