Jonathan Colon added a profile template

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">GroceryStore</string>
+    <string name="j0natr0n">J0NATR0N</string>
+    <string name="firstname_lastname">Jonathan Colon</string>
 </resources>
