Jose G. add in my profile page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">GroceryStore</string>
+    <string name="textviewthree">Name: Jose Gonzalez</string>
+    <string name="textviewfour">Nickname: Joe</string>
+    <string name="textviewfive">Facts: I have a West Highland White Terrier named Bromide</string>
+    <string name="textviewsix">I am an avid record collector and own over 2000 records.</string>
+    <string name="textviewseven">I was born in Washington but moved to Texas when I was 11</string>
+    <string name="textvieweight">I love comedies and my favorite comedian is Norm Macdonald</string>
 </resources>
