--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">GroceryStore</string>
+    <string name="nickname">Nickname: The World\'s Greatest</string>
+    <string name="Bio">My name is Jordan Smith. I\'m the manager of the freezer section of JJ\'s Grocery Store. Here\'s a picture of a waffle. I like waffles.</string>
+    <string name="name">Name:Jordan Smith</string>
 </resources>
