--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">GroceryStore</string>
+    <string name="Name">Name: Catherine Wong</string>
+    <string name="Nickname">Nickname: Cat</string>
+    <string name="Location">Location: New York</string>
+    <string name="mealYesterday">What I had for lunch yesterday: steak sandwich</string>
+    <string name="mealToday">What I will have for lunch today: donuts</string>
+    <string name="lastMeal">What I will have as my last meal on Earth: Jonathan\'s Grocery Store</string>
 </resources>
