Updated Pizza XML Layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
-    <string name="app_name">GroceryStore</string>
+    <string name="app_name">MEL's Pizza</string>
+    <string name="title">PIZZA</string>
+    <string name="button1">HOME</string>
+    <string name="button2">LOG IN</string>
+    <string name="button3">ORDER NOW</string>
 </resources>
